@@ -12,7 +12,8 @@
 }
 
 a.ctools-ajaxing,
-input.ctools-ajaxing {
+input.ctools-ajaxing,
+select.ctools-ajaxing {
   padding-right: 18px !important;
   background: url(../images/status-active.gif) right center no-repeat;
 }
