@@ -13,6 +13,7 @@ ctools 6.x-1.0-dev
 #451928 by populist: Fix file upload from modals.
 #522836 by andrewlevine: Add form_clean_id() to ctools_rebuild_form() to prevent extraneous -1s from appearing.
 #518254: Accidentally inverted truth value on compare users.
+#464252 by andrewlevine: Helper to make onchange requests for select boxes.
 
 ctools 6.x-1.0-beta4
 ==================
